Renamed Monkey suit in index and file

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ nav button.active {
 
 <div class="container">
   <div class="pfp-wrapper" onclick="document.getElementById('about').scrollIntoView({behavior:'smooth'});">
-    <img src="media/images/Zacky in Monkey Suit.jpg" alt="Zacky PFP" class="pfp">
+    <img src="media/images/Zacky_in_Monkey_Suit.jpg" alt="Zacky PFP" class="pfp">
   </div>
 
   <header>
