renamed minigun index 2nd

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ nav button.active {
       </div>
       <div class="skill" data-video="media/videos/Minigun_Wireframe_2_Compressed.mp4">
         <span class="skill-name">3D Design</span>
-        <div class="skill-bar-container" data-video="media/videos/Minigun Wireframe.mp4">
+        <div class="skill-bar-container" data-video="media/videos/Minigun_Wireframe_2_Compressed.mp4">
           <div class="skill-bar" data-gradient="3D Design" style="--skill-level:75%; --bar-color:#6a11cb"></div>
         </div>
       </div>
