renamed KA video everywhere

--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@ nav button.active {
           <div class="skill-bar" data-gradient="Motion Graphics" style="--skill-level:85%; --bar-color:#f7971e"></div>
         </div>
       </div>
-      <div class="skill" data-video="media/videos/KA - Video_1.mp4">
+      <div class="skill" data-video="media/videos/KA_Video_compressed.mp4">
         <span class="skill-name">Video Editing</span>
-        <div class="skill-bar-container" data-video="media/videos/KA - Video_1.mp4">
+        <div class="skill-bar-container" data-video="media/videos/KA_Video_compressed.mp44">
           <div class="skill-bar" data-gradient="Video Editing" style="--skill-level:80%; --bar-color:#00c6ff"></div>
         </div>
       </div>
