--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@ nav button.active {
           <div class="skill-bar" data-gradient="3D Design" style="--skill-level:75%; --bar-color:#6a11cb"></div>
         </div>
       </div>
-      <div class="skill" data-video="media/videos/Melting Glitch YOUR TEXT HERE.mp4">
+      <div class="skill" data-video="media/videos/Melting_Glitch_YOUR_TEXT_HERE.mp4">
         <span class="skill-name">Motion Graphics</span>
-        <div class="skill-bar-container" data-video="media/videos/Melting Glitch YOUR TEXT HERE.mp4">
+        <div class="skill-bar-container" data-video="media/videos/Melting_Glitch_YOUR_TEXT_HERE.mp4">
           <div class="skill-bar" data-gradient="Motion Graphics" style="--skill-level:85%; --bar-color:#f7971e"></div>
         </div>
       </div>
