--- a/index.html
+++ b/index.html
@@ -201,6 +201,14 @@ nav button.active {
   position: relative;
 }
 
+.creative-hint {
+  margin-top: 8px;
+  font-size: 0.95rem;
+  color: #666;
+  opacity: 0.9;
+}
+
+
 .skill {
   margin: 20px 0;
   position: relative;
@@ -345,6 +353,7 @@ nav button.active {
 
     <div class="creative-skills">
       <h2>Creative Skills</h2>
+       <p class="creative-hint">Hover over the bars to preview my work</p>
       <div class="skill" data-video="media/videos/graphic.mp4">
         <span class="skill-name">Graphic Design</span>
         <div class="skill-bar-container" data-video="media/videos/graphic.mp4">
