KA Brand campagin title

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ nav button.active {
   <section id="projects" class="section">
     <h2>Projects</h2>
     <div class="project-container">
-      <div class="project-panel" onclick="window.open('https://zackydesigns.github.io/KAPorfolio/', '_blank')">Brand Campaign</div>
+      <div class="project-panel" onclick="window.open('https://zackydesigns.github.io/KAPorfolio/', '_blank')">KA Brand Campaign</div>
       <div class="project-panel" onclick="window.open('projects/animated-short.html', '_blank')">Animated Short</div>
       <div class="project-panel" onclick="window.open('projects/3d-visual.html', '_blank')">3D Product Visualization</div>
     </div>
