--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ nav button.active {
     <h2>Contact Me</h2>
     <p>Phone: +27 79 714 4594</p>
     <p>Email: zackyportfolio@gmail.com</p>
-    <p>Portfolio: <a href="https://your-portfolio-link.com" target="_blank">View My Work</a></p>
+    <p>Portfolio: <a href="https://zackydesigns.github.io/Links/" target="_blank">View My Work</a></p>
   </section>
 </div>
 
