--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ nav button.active {
 
   <header>
     <h1>Zacky Interactive CV</h1>
-    <p>Multimedia Designer<br>• Graphic Design • Motion Design • Video Editing • UI/UX<br>• Aspiring Game Designer & Story Creator</p>
+    <p>Multimedia Designer<br>• Graphic Design • Motion Design • Video Editing<br>• Aspiring Game Designer & Story Creator</p>
   </header>
 
   <nav>
